# LOTUSim-multi-agents-benchmark

./: .epl-v2.0.tmpl  .gitignore  .gitmodules  CONTRIBUTING.md  README.md
benchmark_code/uuv_benchmark/uuv_ws/catkin_ws/src/benchmark_bluerov2/: CMakeLists.txt  package.xml
benchmark_code/uuv_benchmark/uuv_ws/catkin_ws/src/benchmark_bluerov2/src/: benchmark_subscriber.py  run_benchmark_uuv.py  spawn_multiple_rovs.py
benchmark_results/: README.md  pyproject.toml  requirements.txt
benchmark_results/src/benchmark_results/benchmark_accelerated_time/: statistics_accelerated_time.py
benchmark_results/src/benchmark_results/benchmark_accelerated_time/data/: lotusim_bluerov_rtf_plot_data.csv  lotusim_lrauv_rtf_plot_data.csv  lrauvsim_rtf_plot_data.csv  uuvsim_rtf_plot_data.csv
benchmark_results/src/benchmark_results/benchmark_accelerated_time/data/uuvsim/: benchmark_rtf_100_agents.csv  benchmark_rtf_10_agents.csv  benchmark_rtf_110_agents.csv  benchmark_rtf_11_agents.csv  benchmark_rtf_12_agents.csv  benchmark_rtf_130.csv  benchmark_rtf_13_agents.csv  benchmark_rtf_14_agents.csv  benchmark_rtf_150_agents.csv  benchmark_rtf_15_agents.csv  benchmark_rtf_16_agents.csv  benchmark_rtf_17_agents.csv  benchmark_rtf_180_agents.csv  benchmark_rtf_18_agents.csv  benchmark_rtf_19_agents.csv  benchmark_rtf_1_agent.csv  benchmark_rtf_20_agents.csv  benchmark_rtf_21_agents.csv  benchmark_rtf_22_agents.csv  benchmark_rtf_23_agents.csv  benchmark_rtf_24_agents.csv  benchmark_rtf_25_agents.csv  benchmark_rtf_26_agents.csv  benchmark_rtf_27_agents.csv  benchmark_rtf_2_agents.csv  benchmark_rtf_3_agents.csv  benchmark_rtf_4_agents.csv  benchmark_rtf_50_agents.csv  benchmark_rtf_5_agents.csv  benchmark_rtf_60_agents.csv  benchmark_rtf_6_agents.csv  benchmark_rtf_7_agents.csv  benchmark_rtf_80_agents.csv  benchmark_rtf_8_agents.csv  benchmark_rtf_9_agents.csv
benchmark_results/src/benchmark_results/benchmark_accelerated_time/results/: bluerov_ai_training_comparison.eps  lrauv_ai_training_comparison.eps
benchmark_results/src/benchmark_results/benchmark_bluerov/: statistics_bluerov.py  statistics_unity_bluerov.py
benchmark_results/src/benchmark_results/benchmark_bluerov/data/: UUVSim_results.csv
benchmark_results/src/benchmark_results/benchmark_bluerov/results/: bluerov_lotusim_configs_average_update.csv  bluerov_lotusim_configs_update_plot.eps  bluerov_lotusim_summary.csv  bluerov_uuvsim_lotusim_update_plot.eps
benchmark_results/src/benchmark_results/benchmark_lrauv/: statistics_lrauv.py  statistics_unity_lrauv.py
benchmark_results/src/benchmark_results/benchmark_lrauv/data/: LRAUVSim_results.csv
benchmark_results/src/benchmark_results/benchmark_lrauv/results/: lrauv_lotusim_configs_average_update.csv  lrauv_lotusim_configs_update_plot.eps  lrauv_lotusim_summary.csv  lrauv_uuvsim_lotusim_update_plot.eps
(+1135 files in other folders)
